samples/_failures_safe/1761262799_b58c89_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_747c2a6b.c:145:1: error: expected ‘{’ at end of input
  145 | int matrix_transpose(struct
      | ^~~
